# spin-battles-backend

./: .gitignore  README.md
backend/: .env.example  Cargo.toml
backend/src/: errors.rs  main.rs  mock_data.rs  models.rs  state.rs
backend/src/routes/: health.rs  mod.rs  rewards.rs  wallet.rs
backend/src/services/: game_client.rs  mod.rs  reward_service.rs  signer_service.rs  wallet_service.rs
game-server/: Cargo.toml
game-server/libs/tracing-context/: Cargo.toml  build.rs
game-server/libs/tracing-context/src/: colors.rs  config.rs  fileio.rs  format.rs  glob.rs  health.rs  json.rs  lib.rs  licensing.rs  metrics.rs  output.rs  telemetry.rs  tests.rs
game-server/src/: main.rs  mock_data.rs  models.rs
game-server/src/routes/: battles.rs  health.rs  mod.rs
program/: .gitignore  Anchor.toml  Cargo.toml  package.json
program/src/: lib.rs
program/tests/: spinbattles.ts
tasks/: TASK_BACKEND.md  TASK_DEVOPS.md  TASK_FULLSTACK.md  TASK_SECURITY.md  TASK_SMART_CONTRACT.md
