[package]
name = "spinbattles-backend"
version = "0.1.0"
edition = "2021"
default-run = "spinbattles-backend"

[[bin]]
name = "spinbattles-backend"
path = "src/main.rs"

[[bin]]
name = "keygen"
path = "src/bin/keygen.rs"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["json", "macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Solana / crypto
solana-sdk = "1.18"
bs58 = "0.5"
sha2 = "0.10"

# HTTP client (for game server calls)
reqwest = { version = "0.12", features = ["json"] }

# Config & logging
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
anyhow = "1"

[dev-dependencies]
axum-test = "14"
tokio-test = "0.4"
