[package]
name = "spinbattles-game-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "spinbattles-game-server"
path = "src/main.rs"

[dependencies]
rouille = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
chrono = "0.4"
dotenvy = "0.15"
tracing-context = { path = "libs/tracing-context" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
